--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: https://yangwangblog.ml/
+url: https://penguinwang96825.github.io/Yang-Chinese-Blog
 permalink: post/:abbrlink.html # :year/:month/:day/:title/
 abbrlink:
   alg: crc32   #算法： crc16(default) and crc32
